--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 server.port=8081
-
-# spring.datasource.url=jdbc:mysql://localhost:3306/art?serverTimezone=UTC
-# spring.datasource.username=art
-# spring.datasource.password=School2114-10l
-
-# private.session-timeout = 20
+spring.datasource.url = jdbc:mysql://localhost:3306/art?serverTimezone=UTC
+spring.datasource.username = art
+spring.datasource.password = #art-service
