--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,6 +28,18 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Добавляем зависимость к JPA (является библиотекой) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- Добавляем зависимость к библиотеке MySQL -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
